-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
6.2.0 Alpha
-
None
Running the QML example attached to QTBUG-79218 and trying to zoom in infinitely, causes the application to freeze, while continuously allocating memory. The only way to close the application, is to hit CTRL-C in the console before swapping takes over the whole system.
The allocating loop seems to be at ChartValueAxisX::calculateLayout()inĀ chartvalueaxisx.cpp:94
89 const qreal deltaX = gridRect.width() / (maxValue - minValue);
90
91 QList<qreal> points;
92 const qreal leftPos = gridRect.left();
93 while (value <= maxValue || qFuzzyCompare(value, maxValue)) {
94 points << (value - minValue) * deltaX + leftPos;
95 value += interval;
96 }
97
98 return points;
- resulted from
-
QTBUG-79218 When zooming out enough then the labels on the axes will end up showing drawing errors
-
- In Progress
-